@@ -351,7 +351,6 @@ gdb_disassemble_info (struct gdbarch *gdbarch, struct ui_file *file)
 void
 gdb_disassembly (struct ui_out *uiout,
 		char *file_string,
-		int line_num,
 		int mixed_source_and_assembly,
 		int how_many, CORE_ADDR low, CORE_ADDR high)
 {
